# SurfaceOnlyDeformables

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
OpenCCL/include/: LayoutGraph.h  LayoutMetrics.h  OpenCCL.h  VArray.h  VDTActiveList.h  _hash_map.h  _pair.h
OpenCCL/include/metis/: Metis.h
cmake/: FindMKL.cmake
data/: bunny_friction.json  cube_collide.json  cube_drop.json  glued_cubes.json
include/: barycentric_coordinates.cuh  complex_atomic_add.cuh  constraints_solver.hpp  cross_product_matrix.hpp  cuda_check_error.hpp  elastics_bem_matrix_collection.hpp  elastodynamics_cqbem_collocation_kernels.cuh  elastodynamics_cqbem_galerkin_kernels.cuh  elastodynamics_cqbem_matrix_collection.hpp  elastodynamics_cqbem_object.hpp  elastodynamics_drbem_matrix_collection.hpp  elastodynamics_drbem_object.hpp  elastostatics_bem_matrix_collection.hpp  elastostatics_bem_object.hpp  integrator.hpp  integrator_collocation.hpp  integrator_galerkin.hpp  json.hpp  matrix_io.hpp  physics_base_matrix_collection.hpp  physics_base_object.hpp  rigidbody_matrix_collection.hpp  rigidbody_object.hpp  simulator.hpp  timer.hpp  type_declaration.hpp  viewer.hpp  wavelets.hpp
src/: constraints_solver.cpp  elastics_bem_matrix_collection.cpp  elastodynamics_cqbem_B_angular.cu  elastodynamics_cqbem_B_angular_collocation.cu  elastodynamics_cqbem_B_angular_galerkin_non_singular.cu  elastodynamics_cqbem_B_trans.cu  elastodynamics_cqbem_B_trans_collocation.cu  elastodynamics_cqbem_B_trans_galerkin_non_singular.cu  elastodynamics_cqbem_G.cu  elastodynamics_cqbem_G_collocation.cu  elastodynamics_cqbem_G_galerkin_non_singular.cu  elastodynamics_cqbem_H.cu  elastodynamics_cqbem_H_collocation.cu  elastodynamics_cqbem_H_galerkin_non_singular.cu  elastodynamics_cqbem_galerkin_singular.cpp  elastodynamics_cqbem_matrix_collection.cpp  elastodynamics_cqbem_object.cpp  elastodynamics_drbem_matrix_collection.cpp  elastodynamics_drbem_object.cpp  elastostatics_bem_matrix_collection.cpp  elastostatics_bem_object.cpp  physics_base_matrix_collection.cpp  physics_base_object.cpp  rigidbody_matrix_collection.cpp  rigidbody_object.cpp  simulator.cpp  viewer.cpp
